# webtoonmtl

./: .gitignore  README.md  main.py  mtlcore.py  my_logger.py  pyproject.toml  pytest.toml  requirements.txt  test.py  translator.py
logging_config/: config.json
src/: main.py
src/webtoonmtl/: __init__.py  __main__.py  cli.py
src/webtoonmtl/_config/: logging_config.json
src/webtoonmtl/_utils/: logger.py  logging_config.json  train_model.py  trainer.py
src/webtoonmtl/core/: mtlcore.py  setup.py  trainer.py  translator.py
src/webtoonmtl/ui/: __init__.py  app.py  colors.py  main_window.py  setup_wizard.py  widgets.py
tests/: test.py  test_core.py  test_translation.py
tests/test_core/: test_translation.py
