[project]
name = "webtoonmtl"
version = "1.0.1"
description = "Webtoon machine translation application."
readme = "README.md"
authors = [
    { name = "jyyhuang", email = "jyyhuanggit@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "appdirs>=1.4.4",
    "easyocr>=1.7.2",
    "pyqt6>=6.10.2",
    "sentencepiece>=0.2.1",
    "sacremoses>=0.1.1",
    "transformers>=5.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
webtoonmtl = "webtoonmtl.cli:cli"
